--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -68,13 +68,16 @@
        "6"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# number_of_destinations() # 6"
+    "# number_of_destinations() # 6\n",
+    "def number_of_destinations():\n",
+    "    return len(travel_destinations)\n",
+    "number_of_destinations()"
    ]
   },
   {
@@ -90,7 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "def next_up():\n",
+    "    return list_of_destinations[0]\n",
+    "next_up()"
    ]
   },
   {
@@ -298,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
