--- a/index.ipynb
+++ b/index.ipynb
@@ -107,8 +107,8 @@
    ],
    "source": [
     "def next_up():\n",
-    "    return list_of_destinations[0]\n",
-    "next_up()"
+    "def next_up():\n",
+    "    return list_of_destinations[0]"
    ]
   },
   {
