--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,8 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    return list_of_destinations[0]"
+    "    return list_of_destinations[0]\n",
+    "next_up()"
    ]
   },
   {
