--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
    "source": [
     "def next_up():\n",
     "    return list_of_destinations[0]\n",
-    "next_up()"
+    "next_up"
    ]
   },
   {
