--- a/index.ipynb
+++ b/index.ipynb
@@ -107,8 +107,7 @@
    ],
    "source": [
     "def next_up():\n",
-    "    return list_of_destinations[0]\n",
-    "next_up"
+    "    return list_of_destinations[0]"
    ]
   },
   {
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,14 +128,14 @@
        "'argentina'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "list_of_destinations = ['argentina', 'canada', 'croatia']\n",
-    "# next_up() # 'argentina'"
+    "next_up()"
    ]
   },
   {
