Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -147,11 +147,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "def favorite_destination():\n",
+    "    return \"madagascar\""
    ]
   },
   {
