--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,13 +173,14 @@
        "'madagascar'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# favorite_destination() # 'madagascar'"
+    "# favorite_destination() # 'madagascar'\n",
+    "favorite_destination()"
    ]
   },
   {
