Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "def add_favorite_destination():\n",
+    "    favorite_destinations.append(favorite_destination())\n",
+    "    return favorite_destination()"
    ]
   },
   {
