Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,9 @@
    "source": [
     "favorite_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "# add_favorite_destination()\n",
-    "favorite_destinations[-1] # 'madagascar'"
+    "favorite_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "add_favorite_destination()\n",
+    "favorite_destinations[-1]# 'madagascar'"
    ]
   },
   {
