--- a/index.ipynb
+++ b/index.ipynb
@@ -240,12 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# define function here"
+    "# define function here\n",
+    "def capitalize_countries():\n",
+    "    new_list = []\n",
+    "    for country in capitalized_destinations:\n",
+    "        new_list.append(country.capitalize())\n",
+    "    return new_list"
    ]
   },
   {
