Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,9 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "# define function here\n",
@@ -250,7 +261,9 @@
     "    new_list = []\n",
     "    for country in capitalized_destinations:\n",
     "        new_list.append(country.capitalize())\n",
-    "    return new_list"
+    "    return new_list\n",
+    "\n",
+    "capitalize_countries()"
    ]
   },
   {
