Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -261,9 +261,7 @@
     "    new_list = []\n",
     "    for country in capitalized_destinations:\n",
     "        new_list.append(country.capitalize())\n",
-    "    return new_list\n",
-    "\n",
-    "capitalize_countries()"
+    "    return new_list"
    ]
   },
   {
